Fix spacing issues and add opacity for teaser media

--- a/_sass/components/_components.nav-secondary.scss
+++ b/_sass/components/_components.nav-secondary.scss
@@ -5,6 +5,8 @@
 // nav-secondary
 .c-nav-secondary {
   display: inline-block;
+  margin: 0;
+  padding: 0;  
 
   // nav-secondary__item
   > li {
