--- a/_sass/components/_components.year.scss
+++ b/_sass/components/_components.year.scss
@@ -24,7 +24,7 @@
 
     img {
       @include mx-transition(transform .5s ease);
-      opacity: .5;
+      opacity: .8;
     }
 
     img,
