--- a/_sass/objects/_objects.list-inline.scss
+++ b/_sass/objects/_objects.list-inline.scss
@@ -3,6 +3,9 @@
 \*------------------------------------*/
 
 .o-list-inline {
+  margin: 0;
+  padding: 0;
+
   > .o-list-inline__item {
     display: inline-block;
   }
